--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,5 +1,14 @@
 apply plugin: "com.android.application"
+buildscript {
+    repositories {
+        maven { url 'https://plugins.gradle.org/m2/' } // Gradle Plugin Portal 
+    }
+    dependencies {
+        classpath 'gradle.plugin.com.onesignal:onesignal-gradle-plugin:[0.12.1, 0.99.99]'
+    }
+}
 
+apply plugin: 'com.onesignal.androidsdk.onesignal-gradle-plugin'
 import com.android.build.OutputFile
 
 /**
