--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -190,6 +190,7 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
+    compile project(':react-native-alarm');
 
     if (enableHermes) {
         def hermesPath = "../../node_modules/hermes-engine/android/";
