wip (install lib)

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -191,6 +191,7 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
     compile project(':react-native-alarm');
+    compile project(':react-native-app-launcher');
 
     if (enableHermes) {
         def hermesPath = "../../node_modules/hermes-engine/android/";
