--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -22,6 +22,8 @@
         </intent-filter>
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
+      <receiver android:name="io.cmichel.appLauncher.AlarmReceiver" />   <!-- react-native-app-launcher -->
+
     </application>
 
 </manifest>
