--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -3,3 +3,6 @@ apply from: file("../node_modules/@react-native-community/cli-platform-android/n
 include ':app'
 include ':react-native-alarm'
 project(':react-native-alarm').projectDir = new File(rootProject.projectDir, 	'../node_modules/react-native-alarm/android')
+
+include ':react-native-app-launcher'
+project(':react-native-app-launcher').projectDir = new File(settingsDir, '../node_modules/react-native-app-launcher/android')
