--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-alarm": "^1.2.0",
+    "react-native-app-launcher": "git+https://github.com/MrToph/react-native-app-launcher.git",
     "react-native-onesignal": "^3.6.1"
   },
   "devDependencies": {
