--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-native": "0.61.5",
     "react-native-alarm": "^1.2.0",
     "react-native-app-launcher": "git+https://github.com/MrToph/react-native-app-launcher.git",
-    "react-native-onesignal": "^3.6.1"
+    "react-native-onesignal": "^3.6.1",
+    "react-native-webview": "^8.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
