--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "moment": "^2.24.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-alarm": "^1.2.0",
     "react-native-app-launcher": "git+https://github.com/MrToph/react-native-app-launcher.git",
     "react-native-onesignal": "^3.6.1",
+    "react-native-sound": "^0.11.0",
     "react-native-webview": "^8.0.6"
   },
   "devDependencies": {
